[package]
name = "geppetto-attribute-program"
version = "0.1.0"
edition = "2021"
description = "Anchor attribute macro for defining a program"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
geppetto-parser = { path = "../../parser" }
pinocchio = "0.8.4"